[package]
name    = "stack-ripper"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
cfg-if              = "1.0.0"
critical-section    = "1.1.2"

embassy-executor    = { version = "0.5.0", features = ["task-arena-size-8192", "defmt"] }
embassy-sync        = "0.5.0"
embassy-time        = { version = "0.3.0", features = ["generic-queue-8", "defmt"]}
embassy-time-driver = { version = "0.1.0", optional = true }

embedded-hal        = "1.0.0"
embedded-hal-async  = "1.0.0"
embedded-hal-bus    = { version = "0.1.0", features = ["async"] }
embedded-io-async   = "0.6.1"
embedded-storage    = "0.3.1"

esp-alloc           = "0.3.0"
esp-backtrace       = { version = "0.11.1", features = ["esp32c3", "exception-handler", "panic-handler", "println", "defmt"] }
esp-hal             = { version = "0.16.1", features = ["esp32c3", "async", "embassy", "embassy-executor-thread", "embassy-executor-interrupt", "embassy-time-timg0", "opsram-2m", "defmt"] }
esp-println         = { version = "0.9.1", features = ["esp32c3", "defmt-espflash", "uart", "log"] }

bme280              = { version = "0.5.0", features = ["async", "embedded-hal-async"] }
nmea0183            = "0.4.0"
micromath           = "2.1.0"

defmt               = "0.3.6"

# Current release of lora-phy doesn't support the stable embedded-hal-async crates, while upstream does.
# when v3 is out, change this.
lora-phy            = { git = "https://github.com/lora-rs/lora-rs" }

fugit               = "0.3.7"
heapless            = "0.7.17"
hex-literal         = "0.4.1"
hmac                = { version = "0.12.1", default-features = false }
nb                  = "1.1.0"
sha2                = { version = "0.10.8", default-features = false}
ssd1306             = "0.8.4"
static_cell         = { version = "2.0.0", features = ["nightly"] }
usb-device          = "0.3.2"
usbd-serial         = "0.2.1"
serde               = { version = "1.0.197", default-features = false }
postcard            = "1.0.8"

[profile.release]  
codegen-units    = 1
debug            = 2
debug-assertions = false
incremental      = false
opt-level        = 3
lto = 'fat'
overflow-checks  = false
