[package]
name    = "stack-ripper"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
cfg-if              = "1.0.0"
critical-section    = "1.1.3"

embassy-executor    = { version = "0.6.3", features = ["task-arena-size-8192", "defmt"] }
embassy-sync        = "0.5.0"
embassy-time        = { version = "0.3.1", features = ["defmt"]}
embassy-time-driver = { version = "0.1.0", optional = true }
embassy-embedded-hal = "0.1.0"

embedded-hal        = "1.0.0"
embedded-hal-async  = "1.0.0"
embedded-hal-bus    = { version = "0.1.0", features = ["async"] }
embedded-io-async   = "0.6.1"

esp-backtrace       = { version = "0.14.1", features = ["esp32c3", "exception-handler", "panic-handler", "println"] }
esp-hal             = { version = "0.22.0", features = ["esp32c3", "defmt"] }
esp-hal-embassy     = { version = "0.5.0", features = ["esp32c3", "defmt", "integrated-timers"]}
esp-println         = { version = "0.11.0", features = ["esp32c3", "defmt-espflash"] }
esp-wifi            = { version = "0.11.0", features = ["esp32c3", "ble"] }
esp-alloc           = "0.5.0"
bleps               = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "a5148d8ae679e021b78f53fd33afb8bb35d0b62e", features = [ "macros", "async"] }
defmt               = "0.3.6"

nmea0183            = "0.4.0"
micromath           = "2.1.0"
lora-phy            = "3.0.1"


fugit               = "0.3.7"
heapless            = "0.7.17"
nb                  = "1.1.0"
serde               = { version = "1.0.197", default-features = false }
postcard            = "1.0.8"
static_cell         = "2.1.0"
bno055              = { git = "https://github.com/odrusso/bno055", version = "0.4.0"}

[profile.release]
codegen-units    = 1
debug            = 0
debug-assertions = false
incremental      = false
opt-level        = 3
lto              = 'fat'
overflow-checks  = false
panic            ='abort'
